--- a/Sicsoft.Checkin.Web/Pages/Reparacion/Index.cshtml
+++ b/Sicsoft.Checkin.Web/Pages/Reparacion/Index.cshtml
@@ -32,6 +32,14 @@
             top: 0;
             background: white;
         }
+
+        .badge {
+            background-color: #ffed00;
+            color: black;
+            padding: 4px 8px;
+            text-align: center;
+            border-radius: 5px;
+        }
     </style>
 
 }
@@ -52,7 +60,12 @@
                 // $('#tablita').DataTable();
                 $('.js-example-basic-multiple').select2();
             });
-
+            $('table.first2').DataTable({
+                "order": [
+                    [0, "desc"], // Ordenar por la columna 0 en orden descendente.
+                    [1, "desc"]   // Luego, ordenar por la columna 1 en orden ascendente.
+                ]
+            });
 
         });
 
@@ -267,15 +280,18 @@
                         <h5>Reparaciones</h5>
                     </div>
                     <div class="col-md-4">
+                        <div><span class="badge">Prioridad ALTA</span></div>
+
                     </div>
                 </div>
             </div>
 
             <div class="card-body">
                 <div class="table-responsive">
-                    <table class="table table-striped table-bordered first">
+                    <table class="table table-striped table-bordered first2">
                         <thead>
                             <tr> 
+                                <th hidden>Prioridad</th>
                                 <th>ID Llamada</th>
                                 <th>Tecnico</th> 
                                 <th>Fecha SISO</th>
@@ -291,7 +307,8 @@
                         <tbody>
                             @foreach (var item in Model.Objeto)
                             {
-                                <tr style="@(!string.IsNullOrEmpty(item.PrioridadAtencion) ?   item.PrioridadAtencion == "1" ? "background-color: #ff877e" : "" : "")">
+                                <tr style="@(!string.IsNullOrEmpty(item.PrioridadAtencion) ?   item.PrioridadAtencion == "1" ? "background-color: #ffed00" : "" : "")">
+                                    <td hidden>@item.PrioridadAtencion</td>
                                     <td>@item.idLlamada</td>
                                     @{
                                         var id = item.idTecnico.ToString();
@@ -372,6 +389,8 @@
                         </tbody>
                         <tfoot>
                             <tr> 
+                                <th hidden>Prioridad</th>
+
                                 <th>ID Llamada</th>
                                 <th>Tecnico</th> 
                                 <th>Fecha SISO</th>
