cambios de produccion

--- a/Sicsoft.Checkin.Web/Pages/Facturas/Observar.cshtml
+++ b/Sicsoft.Checkin.Web/Pages/Facturas/Observar.cshtml
@@ -440,6 +440,16 @@
                                 </tr>
                                 <tr>
                                     <td align="left">
+                                        <strong class="text-dark">Redondeo</strong>
+                                    </td>
+                                    <td align="right">
+                                        <span class="moneda"></span>
+
+                                        <strong style="font-weight: inherit;" id="RedondeoGeneral">@decimal.Round(Model.Input.Redondeo, 2).ToString("N", formato)</strong>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td align="left">
                                         <strong class="text-dark">Total</strong>
                                     </td>
                                     <td align="right">
