--- a/Sicsoft.Checkin.Web/Pages/EntregasFacturar/Facturar.cshtml
+++ b/Sicsoft.Checkin.Web/Pages/EntregasFacturar/Facturar.cshtml
@@ -146,6 +146,8 @@
                 RolAceptacion = true;
                 $("#Moneda").val("@Model.Factura.Moneda");
                 console.log(detalles);
+                $("#descGeneral").val(parseFloat($("#PorDescto").val().replace(",", ".")));//val(parseFloat("@Model.Factura.PorDesc"));
+
                 for (var i = 0; i < detalles.length; i++) {
                     var IMP = ImpuestosS.find(a => a.id == detalles[i].idImpuesto);
                     var calculoIMP = IMP.Tarifa;
@@ -178,7 +180,6 @@
                     Detalles.push(detalle);
 
                 }
-                $("#descGeneral").val(parseFloat("@Model.Factura.PorDesc"));
                 RellenaTabla();
                 ModificaMoneda(true);
             } catch (e) {
@@ -442,6 +443,7 @@
                 var Impuestos = 0;
                 var Total = 0;
                 var PorDescuento = 0;
+                var redondeo = 0;
 
                 PorDescuento = $("#descGeneral").val();
                 for (var i = 0; i < Detalles.length; i++) {
@@ -464,11 +466,14 @@
                     Impuestos = (SubTotal - Descuentos) * 0.13;
                     Total = (SubTotal - Descuentos) + Impuestos;
                 }
-
+                var TotalAntesRedondeo = Total;
+                //Total = redondearAl5(Total, $("#Moneda").val());
+                redondeo = Total - TotalAntesRedondeo;
                 $("#SubtotalGeneral").text(SubTotal.toFixed(2));
                 $("#DescGeneral").text(Descuentos.toFixed(2));
                 $("#ImpGeneral").text(Impuestos.toFixed(2));
-                $("#TotalGeneral").text(Total.toFixed(2));
+                $("#TotalGeneral").val(Total.toFixed(2));
+                $("#RedondeoGeneral").text(redondeo.toFixed(2));
 
             } catch (e) {
                 Swal.fire({
@@ -480,7 +485,51 @@
             }
 
         }
+        function DeducirMontos(repite) {
+            try {
+                if (repite != "true") {
+                    TotalDeseadoGlobal = parseFloat($("#TotalGeneral").val());
 
+                }
+                // Variables iniciales
+                const subtotal = parseFloat($("#SubtotalGeneral").text());
+                const totalDeseado = TotalDeseadoGlobal;
+                const montoImpuesto = parseFloat($("#ImpGeneral").text()); // Suponiendo un monto de impuesto conocido
+
+
+                // Cálculo del descuento
+                const descuento = subtotal + montoImpuesto - totalDeseado;
+                const porcentajeDescuento = (descuento / subtotal) * 100;
+                if (parseFloat(porcentajeDescuento.toFixed(2)) < 0) {
+                    Swal.fire({
+                        icon: 'error',
+                        title: 'Oops...',
+                        text: 'Ha ocurrido un error: El porcentaje de descuento no puede quedar negativo '
+
+                    });
+                } else {
+                    $("#descGeneral").val(parseFloat(porcentajeDescuento.toFixed(2)));
+                    $("#DescGeneral").text(parseFloat(descuento.toFixed(2)));
+                    var cantidadPermitidos = 5;
+                    var i = 0;
+                    ModificaTodo();
+                    while (totalDeseado != parseFloat($("#TotalGeneral").val()) && i < cantidadPermitidos) {
+                        DeducirMontos("true");
+                        i++;
+                    }
+                }
+              
+
+
+            } catch (e) {
+                Swal.fire({
+                    icon: 'error',
+                    title: 'Oops...',
+                    text: 'Ha ocurrido un error  ' + e
+
+                })
+            }
+        }
         function Validar(recibido) {
             try {
                 var bandera = true;
@@ -672,8 +721,9 @@
                     Subtotal: $("#SubtotalGeneral").text(),
                     TotalImpuestos: $("#ImpGeneral").text(),
                     TotalDescuento: $("#DescGeneral").text(),
-                    TotalCompra: $("#TotalGeneral").text(),
+                    TotalCompra: $("#TotalGeneral").val(),
                     PorDesc: $("#descGeneral").val(),
+                    Redondeo: $("#RedondeoGeneral").text(),
                     Detalle: DetFactura,
                     Metodos: MetodosPagosAbonos
 
@@ -1053,7 +1103,7 @@
                     total += Detalles[i].TotalLinea;
                 }
                 var descuento = parseFloat($("#DescGeneral").text());
-                total = parseFloat($("#TotalGeneral").text());
+                total = parseFloat($("#TotalGeneral").val());
                 return total;
             } catch (e) {
                 Swal.fire({
@@ -1072,7 +1122,7 @@
             try {
                 var TipodeCambio = TipoCambio.find(a => a.Moneda == "USD");
                 $(".MetodosPagoRellenar").hide();
-                var totalG = parseFloat(ReplaceLetra($("#TotalGeneral").text()));
+                var totalG = parseFloat(ReplaceLetra($("#TotalGeneral").val()));
 
                 if ($("#Moneda").val() != "COL") {
                     totalG = totalG * TipodeCambio.TipoCambio;
@@ -1085,7 +1135,7 @@
 
                 if (Cond.Dias == 0) {
                     if ($("#Moneda").val() == "COL") {
-                        var Total = parseFloat(ReplaceLetra($("#TotalGeneral").text()));
+                        var Total = parseFloat(ReplaceLetra($("#TotalGeneral").val()));
                         $("#totPago").text(formatoDecimal(Total));
                         $("#fatPago").text(formatoDecimal(Total));
                         $("#selectMonedaP").val($("#Moneda").val());
@@ -1101,7 +1151,7 @@
 
                         $("#modalPagos").modal("show");
                     } else {
-                        var Total = parseFloat(ReplaceLetra($("#TotalGeneral").text()));
+                        var Total = parseFloat(ReplaceLetra($("#TotalGeneral").val()));
                         $("#totPagoD").text(formatoDecimal(Total));
                         $("#fatPagoD").text(formatoDecimal(Total));
                         $("#selectMonedaP").val($("#Moneda").val());
@@ -1474,8 +1524,8 @@
                 var MonedaDoc = $("#Moneda").val();
                 var TipodeCambio = TipoCambio.find(a => a.Moneda == "USD");
 
-                var Total = MonedaDoc == "COL" ? parseFloat(ReplaceLetra($("#TotalGeneral").text())) - parseFloat(ReplaceLetra($("#pagPago").text())) : 0; //Total En Colones
-                var TotalD = MonedaDoc != "COL" ? parseFloat(ReplaceLetra($("#TotalGeneral").text())) - parseFloat(ReplaceLetra($("#pagPagoD").text())) : 0;
+                var Total = MonedaDoc == "COL" ? parseFloat(ReplaceLetra($("#TotalGeneral").val())) - parseFloat(ReplaceLetra($("#pagPago").text())) : 0; //Total En Colones
+                var TotalD = MonedaDoc != "COL" ? parseFloat(ReplaceLetra($("#TotalGeneral").val())) - parseFloat(ReplaceLetra($("#pagPagoD").text())) : 0;
 
                 if (Total <= 0 && TotalD <= 0) {
                     Swal.fire({
@@ -1700,10 +1750,10 @@
 
 
                 if (MonedaDoc != "COL") {
-                    TotalD = parseFloat(ReplaceLetra($("#TotalGeneral").text()));
+                    TotalD = parseFloat(ReplaceLetra($("#TotalGeneral").val()));
                     Total = TotalD * TipodeCambio.TipoCambio;
                 } else {
-                    Total = parseFloat(ReplaceLetra($("#TotalGeneral").text()));
+                    Total = parseFloat(ReplaceLetra($("#TotalGeneral").val()));
                     TotalD = Total / TipodeCambio.TipoCambio;
                 }
 
@@ -1819,7 +1869,7 @@
                 var Monto = parseFloat($("#MontoPago").val()); //Monto que se pone el input
                 var MonedaDoc = $("#Moneda").val(); //Moneda del documento
                 var TipodeCambio = TipoCambio.find(a => a.Moneda == "USD");
-                var Total = parseFloat(ReplaceLetra($("#TotalGeneral").text()));
+                var Total = parseFloat(ReplaceLetra($("#TotalGeneral").val()));
                 var Metodo = $("#MetodoSeleccionado").val();
 
 
@@ -1893,7 +1943,7 @@
                 <input hidden id="CB" value="@JsonConvert.SerializeObject(Model.CuentasBancarias)" />
                 <input hidden id="Exoneraciones" value="@JsonConvert.SerializeObject(Model.Exoneraciones.Exoneraciones)" />
                 <input hidden id="CondicionesPagos" value="@JsonConvert.SerializeObject(Model.Condiciones)" />
-
+                <input hidden id="PorDescto" asp-for="Factura.PorDesc" />
 
 
 
@@ -2152,11 +2202,24 @@
                                 </tr>
                                 <tr>
                                     <td align="left">
+                                        <strong class="text-dark">Redondeo</strong>
+                                    </td>
+
+                                    <td align="right">
+                                        <span class="moneda"></span>
+
+                                        <strong style="font-weight: inherit;" id="RedondeoGeneral"></strong>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td align="left">
                                         <strong class="text-dark">Total</strong>
                                     </td>
                                     <td align="right">
-                                        <span class="moneda"></span>
-                                        <strong class="text-dark" id="TotalGeneral"></strong>
+                                        <span class="moneda" style="display: inline-block; vertical-align: middle;"></span>
+                                        <input class="form-control" type="number" size="5" style="width: 38%; display: inline-block; vertical-align: middle;" onchange="javascript: DeducirMontos()" id="TotalGeneral" />
+
+                                       @*  <strong class="text-dark" id="TotalGeneral"></strong> *@
                                     </td>
                                 </tr>
 
